--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
 	</div>
 	<div class="col-md-12">
 	<form class="addComment" id="addComments">
+	    <p>Select item to read/write comment</p>
         <input type="Text" class="commentText" name="Select item to read/write comment"
         placeholder="add some comments here ..." id="commentValue" required />
         <input type="submit" value="Add comment">
