--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <h1>File Browser</h1>
     
 	<div class="itemInfo">Files browsed from Cloud9 project directory without system ./c9 and ./nodemodules.<br>
-	Left-click - open/close folder. Right-click - choose item for comment.<br>
-	User login, deleting comment - coming soon.
+	Left-click - open/close folder. Right-click - choose item for comment (or comment for delete/edit).<br>
+	User login, editing comment - coming soon.
 	</div>
 	
     <div>
@@ -23,6 +23,7 @@
     </div>
     
   <div class="container">
+	
 	<div class="col-md-8" id="containerTree"></div>
 		
 	<div class="col-md-4">
@@ -32,17 +33,25 @@
 				<h4 class="panel-title" id="commentsHeader"></h4>
 			</div>
 			<div class="panel-body all-comments" id="allComments"></div>
+			
+			<div class="btn-group btn-group-justified">
+			  <div class="btn-group">
+				<button type="button" class="btn btn-warning" id="edit">Edit comment</button>
+			  </div>
+			  <div class="btn-group">
+				<button type="button" class="btn btn-danger" id="delete">Delete comment</button>
+			  </div>
+			</div>
 		</div>
 	</div>
 	<div class="col-md-12">
 	<form class="addComment" id="addComments">
-	    <p>Select item to read/write comment</p>
-        <input type="Text" class="commentText" name="Select item to read/write comment"
-        placeholder="add some comments here ..." id="commentValue" required />
+        <p>Select item to read/write comment</p>
+		<input type="Text" class="commentText" placeholder="add some comments here ..." id="commentValue" required />
         <input type="submit" value="Add comment">
     </form>
     </div>
-	
+
   </div>
 
     <script src="/js/connectionManage.js"></script>
